# senshi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cmd_out.txt  pyproject.toml  senshi_dast_localhost_20260306_182115.json  senshi_dast_localhost_20260306_224147.json  senshi_dast_localhost_20260306_225724.json  senshi_dast_localhost_20260306_234950.json  senshi_dast_localhost_20260307_001439.json  senshi_dast_localhost_20260307_003439.json
sast_test/: vuln.py
senshi/: __init__.py  cli.py
senshi/agent/: actions.py  context.py  pentest_agent.py  planner.py
senshi/ai/: __init__.py  batch_analyzer.py  brain.py  chain_builder.py  code_analyzer.py  false_positive_filter.py  payload_gen.py  report_writer.py  response_analyzer.py
senshi/analysis/: __init__.py  differ.py  jwt_analyzer.py
senshi/auth/: form_parser.py  idor_tester.py  manager.py
senshi/browser/: __init__.py  analyzer.py  auth_handler.py  dom_analyzer.py  engine.py  exploit_executor.py  exploiter.py  interactor.py  interceptor.py  runtime.py  spa_crawler.py
senshi/core/: __init__.py  attack_surface.py  config.py  engine.py  evidence.py  scope.py  session.py
senshi/dast/: __init__.py  browser_recon.py  coverage_scanner.py  crawler.py  fuzzer.py  graphql.py  openapi_discovery.py  param_discovery.py  tech_detector.py  verifier.py
senshi/exploit/: __init__.py  base.py  config.py  engine.py
senshi/models/: __init__.py  attack_surface.py  endpoint.py  request.py  response.py
senshi/modules/: __init__.py  auth.py  base.py  cmdi.py  deserialization.py  idor.py  info_disclosure.py  open_redirect.py  sqli.py  ssrf.py  ssti.py  xss.py
senshi/oob/: __init__.py  (+2 more)
tests/: __init__.py  test_brain.py  test_crawler.py  test_dast_scanners.py  test_sast_scanners.py
(+68 files in other folders)
