[project]
name = "senshi"
version = "0.6.1"
description = "AI-powered SAST + DAST security scanner for bug bounty hunters"
authors = [{ name = "Manthan Ghasadiya" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "security",
    "scanner",
    "SAST",
    "DAST",
    "bug-bounty",
    "AI",
    "LLM",
    "pentesting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.24.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "nest_asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "flask"]
browser = ["playwright>=1.40.0"]
websocket = ["websockets>=12.0"]
all = ["playwright>=1.40.0", "websockets>=12.0"]

[project.scripts]
senshi = "senshi.cli:app"

[project.urls]
Homepage = "https://github.com/manthanghasadiya/senshi"
Repository = "https://github.com/manthanghasadiya/senshi"
Issues = "https://github.com/manthanghasadiya/senshi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
